# laude-code

./: README.md  pyproject.toml
agent/: context.py  core.py  git.py  main.py  prompts.py
agent/tools/: base.py  edit.py  read.py  search.py  shell.py  write.py
coding_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
