[project]
name = "coding-agent"
version = "0.1.0"
description = "Minimal powerful coding agent"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
tree-sitter = ["tree-sitter>=0.22", "tree-sitter-languages>=1.10"]

[project.scripts]
laude = "agent.main:main"
